-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.7.2
=====
- mssql
  - Adjusted the pyodbc dialect such that bound
    values are passed as bytes and not unicode
    if the "Easysoft" unix drivers are detected. 
    This is the same behavior as occurs with
    FreeTDS.  Easysoft appears to segfault
    if Python unicodes are passed under
    certain circumstances.

0.7.1
=====
- general
  - Added a workaround for Python bug 7511 where
    failure of C extension build does not 
    raise an appropriate exception on Windows 64
    bit + VC express [ticket:2184]

- orm
  - "delete-orphan" cascade is now allowed on
    self-referential relationships - this since
    SQLA 0.7 no longer enforces "parent with no 
    child" at the ORM level; this check is left
    up to foreign key nullability.  
    Related to [ticket:1912]

  - Repaired new "mutable" extension to propagate
    events to subclasses correctly; don't 
    create multiple event listeners for 
    subclasses either.  [ticket:2180]

  - Modify the text of the message which occurs
    when the "identity" key isn't detected on 
    flush, to include the common cause that
    the Column isn't set up to detect
    auto-increment correctly; [ticket:2170].
    Also in 0.6.8.

  - Fixed bug where transaction-level "deleted"
    collection wouldn't be cleared of expunged
    states, raising an error if they later
    became transient [ticket:2182]. 
    Also in 0.6.8.

- sql
  - Fixed bug whereby metadata.reflect(bind)
    would close a Connection passed as a
    bind argument.  Regression from 0.6.

  - Streamlined the process by which a Select
    determines what's in it's '.c' collection.
    Behaves identically, except that a 
    raw ClauseList() passed to select([]) 
    (which is not a documented case anyway) will
    now be expanded into its individual column
    elements instead of being ignored.

- engine
  - Deprecate schema/SQL-oriented methods on 